--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
                 </div>
                 <!--    company two   -->
                 <div class="work-expirience-company">
+                    <h4 class="work-experience-position">Senior ITC engineer <span class="company">Ericsson Ukraine</span></h4>
+                    <p class="work-expirience-period">September 2019 - up to now <span class="work-expirience-divider">|</span> Ukraine</p>
+
+                    <ul class="work-expirience-duties">
+                        <li class="work-expirience-duty">Customer Management Incident/Change/Request Handling</li>
+                        <li class="work-expirience-duty">Dealer Support</li>
+                    </ul>
                     <h4 class="work-experience-position">ITC engineer <span class="company">Ericsson Ukraine</span></h4>
                     <p class="work-expirience-period">Apr 2018 - Sept 2019 <span class="work-expirience-divider">|</span> Ukraine</p>
                 
