--- a/index.html
+++ b/index.html
@@ -58,23 +58,15 @@
 
                 <!--    company three   -->
                 <div class="work-expirience-company">
-                    <h4 class="work-experience-position">Senior ITC engineer <span class="company">Ericsson Ukraine</span></h4>
-                    <p class="work-expirience-period">September 2019 - up to now <span class="work-expirience-divider">|</span> Ukraine</p>
-
+                    <h4 class="work-experience-position">Aplication engineer / CS tech team<span class="company">Netcracker</span></h4>
+                    <p class="work-expirience-period">September 2021 - up to now <span class="work-expirience-divider">|</span> Ukraine</p>
                     <ul class="work-expirience-duties">
-                        <li class="work-expirience-duty">Customer Management Incident/Change/Request Handling</li>
-                        <li class="work-expirience-duty">Dealer Support</li>
+                        <li class="work-expirience-duty"></li>
+                        <li class="work-expirience-duty"></li>
                     </ul>
                 </div>
                 <!--    company two   -->
                 <div class="work-expirience-company">
-                    <h4 class="work-experience-position">Senior ITC engineer <span class="company">Ericsson Ukraine</span></h4>
-                    <p class="work-expirience-period">September 2019 - up to now <span class="work-expirience-divider">|</span> Ukraine</p>
-
-                    <ul class="work-expirience-duties">
-                        <li class="work-expirience-duty">Customer Management Incident/Change/Request Handling</li>
-                        <li class="work-expirience-duty">Dealer Support</li>
-                    </ul>
                     <h4 class="work-experience-position">ITC engineer <span class="company">Ericsson Ukraine</span></h4>
                     <p class="work-expirience-period">Apr 2018 - Sept 2019 <span class="work-expirience-divider">|</span> Ukraine</p>
                 
@@ -83,6 +75,14 @@
                         <li class="work-expirience-duty">ITIL service workflows: event management, access control, problem management, incident management.</li>
                         <li class="work-expirience-duty">Manual testing, creation of test cases based on a technical sheet, analysis of actual and expected results.</li>
                     </ul>
+                    <h4 class="work-experience-position">Senior ITC engineer <span class="company">Ericsson Ukraine</span></h4>
+                    <p class="work-expirience-period">September 2019 - September 2021 <span class="work-expirience-divider">|</span> Ukraine</p>
+
+                    <ul class="work-expirience-duties">
+                        <li class="work-expirience-duty">Customer Management Incident/Change/Request Handling</li>
+                        <li class="work-expirience-duty">Dealer Support</li>
+                    </ul>
+                    
                 </div>
                 <!--    company one   -->
                 <div class="work-expirience-company">
