--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 <p class="about-me-description">
                 </p>
             </div>
-               <!-- projects section -->
             <!-- <div class="projects-section">
                 <h3 class="main-content-title">Projects</h3> 
 
@@ -60,10 +59,10 @@
                 <div class="work-expirience-company">
                     <h4 class="work-experience-position">Aplication engineer / CS tech team<span class="company">Netcracker</span></h4>
                     <p class="work-expirience-period">September 2021 - up to now <span class="work-expirience-divider">|</span> Ukraine</p>
-                    <ul class="work-expirience-duties">
+                    <!--<ul class="work-expirience-duties">
                         <li class="work-expirience-duty"></li>
                         <li class="work-expirience-duty"></li>
-                    </ul>
+                    </ul>  -->
                 </div>
                 <!--    company two   -->
                 <div class="work-expirience-company">
