--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="main-content-section">
             <!--    about me section    -->
             <div class="about-me-section">
-                <h2 class="about-me-proffession">ITC Engineer</h2>
+                <h2 class="about-me-proffession">Aplication Engineer</h2>
                 <h1 class="about-me-name">Oleksandr Riabukha</h1>
                 <p class="about-me-description">
                 </p>
@@ -57,7 +57,7 @@
 
                 <!--    company three   -->
                 <div class="work-expirience-company">
-                    <h4 class="work-experience-position">Aplication engineer / CS tech team <span class="company">Netcracker</span></h4>
+                    <h4 class="work-experience-position">Aplication engineer / CS tech team <span class="company">Netcracker Technology</span></h4>
                     <p class="work-expirience-period">September 2021 - up to now <span class="work-expirience-divider">|</span> Ukraine</p>
                     <!--<ul class="work-expirience-duties">
                         <li class="work-expirience-duty"></li>
