--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
                 <ol class="project-list">
                     <li class="projects-item">
                         <span class="projects-text">
-                        <a href="https://hellenglish.goit.global/" class="project-link">https://hellenglish.goit.global/</a>
+                        <a href="https://" class="project-link">https://</a>
                         .............
                         <span class="projects-bracket">[</span> HTML5, CSS3 <span class="projects-bracket">]</span>
                         </span>
                     </li>
                     <li class="projects-item">
                         <span class="projects-text">
-                        <a href="https://kidslike.goit.global/" class="project-link">https://kidslike.goit.global/</a>
+                        <a href="https://" class="project-link">https://</a>
                         .....................
                         <span class="projects-bracket">[</span> JavaScript <span class="projects-bracket">]</span>
                         </span>
                     </li>
                     <li class="projects-item">
                         <span class="projects-text">
-                        <a href="https://cryptohub.goit.global/" class="project-link">https://cryptohub.goit.global/</a>
+                        <a href="https://" class="project-link">https://</a>
                         ..............
                         <span class="projects-bracket">[</span> React.js, Node.js <span class="projects-bracket">]</span>
                         </span>
@@ -57,7 +57,7 @@
 
                 <!--    company three   -->
                 <div class="work-expirience-company">
-                    <h4 class="work-experience-position">Aplication engineer / CS tech team <span class="company">Netcracker Technology</span></h4>
+                    <h4 class="work-experience-position">Aplication engineer / Aplication analyst <span class="company">Netcracker Technology</span></h4>
                     <p class="work-expirience-period">September 2021 - up to now <span class="work-expirience-divider">|</span> Ukraine</p>
                     <!--<ul class="work-expirience-duties">
                         <li class="work-expirience-duty"></li>
@@ -129,7 +129,8 @@
             <div class="tech-skills-section">
                 <h3 class="sidebar-tittle">Tech Skills</h3>
                 <ul class="tech-skills-list">
-                    <li class="tech-skills-items"><span class="tech-skills-items-text">Management of IT Operations (advanced user), JIRA (basic experience)</span></li>
+                    <li class="tech-skills-items"><span class="tech-skills-items-text">Management of IT Operations (advanced user), JIRA </span></li>
+                    <li class="tech-skills-items"><span class="tech-skills-items-text">AWS EKS, Lens, Postman, swagger-ui, Grafana, Greylog </span></li>
                     <li class="tech-skills-items"><span class="tech-skills-items-text">SQL, Bash (entry level)</span></li>
                     <li class="tech-skills-items"><span class="tech-skills-items-text">HTML5, CSS3</span></li>
                     <li class="tech-skills-items"><span class="tech-skills-items-text">Basics of Telecommunications</span></li>
