--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <ul class="tech-skills-list">
                     <li class="tech-skills-items"><span class="tech-skills-items-text">Management of IT Operations (advanced user), JIRA </span></li>
                     <li class="tech-skills-items"><span class="tech-skills-items-text">AWS EKS, Lens, Postman, swagger-ui, Grafana, Greylog </span></li>
-                    <li class="tech-skills-items"><span class="tech-skills-items-text">SQL, Bash (entry level)</span></li>
+                    <li class="tech-skills-items"><span class="tech-skills-items-text">Phython, SQL, Bash (entry level)</span></li>
                     <li class="tech-skills-items"><span class="tech-skills-items-text">HTML5, CSS3</span></li>
                     <li class="tech-skills-items"><span class="tech-skills-items-text">Basics of Telecommunications</span></li>
                     <li class="tech-skills-items"><span class="tech-skills-items-text">Network Protocols: TCP/IP, DNS, DHCP, traffic routing protocols</span> </li> 
