--- a/index.html
+++ b/index.html
@@ -58,28 +58,24 @@
                 <!--    company three   -->
                 <div class="work-expirience-company">
                     <h4 class="work-experience-position">Aplication engineer / Aplication analyst <span class="company">Netcracker Technology</span></h4>
-                    <p class="work-expirience-period">September 2021 - up to now <span class="work-expirience-divider">|</span> Ukraine</p>
-                    <!--<ul class="work-expirience-duties">
-                        <li class="work-expirience-duty"></li>
-                        <li class="work-expirience-duty"></li>
-                    </ul>  -->
-                </div>
-                <!--    company two   -->
-                <div class="work-expirience-company">
-                    <h4 class="work-experience-position">Senior ITC engineer <span class="company">Ericsson Ukraine</span></h4>
-                    <p class="work-expirience-period">September 2019 - September 2021 <span class="work-expirience-divider">|</span> Ukraine</p>
-
+                    <p class="work-expirience-period">Sept 2021 - Dec 2023<span class="work-expirience-divider">|</span> Ukraine</p>
                     <ul class="work-expirience-duties">
                         <li class="work-expirience-duty">Customer Management Incident/Change/Request Handling</li>
-                        <li class="work-expirience-duty">Dealer Support</li>
+                        <li class="work-expirience-duty">Manage Hot/Data fixes preparation and applying</li>
+                        <li class="work-expirience-duty">3P integrations supporting</li>
+                        <li class="work-expirience-duty">Versioning & CI/CD, delivery, AT analising</li>
                     </ul>
+                </div>
+                <!--    company two   -->
                     <h4 class="work-experience-position">ITC engineer <span class="company">Ericsson Ukraine</span></h4>
-                    <p class="work-expirience-period">Apr 2018 - Sept 2019 <span class="work-expirience-divider">|</span> Ukraine</p>
+                    <p class="work-expirience-period">Apr 2018 - Sept 2021 <span class="work-expirience-divider">|</span> Ukraine</p>
                 
                     <ul class="work-expirience-duties">
-                        <li class="work-expirience-duty">Monitoring alarms and performance of Telecom BSS</li>
+                        <li class="work-expirience-duty">Customer Management Incident/Change/Request Handling</li>
                         <li class="work-expirience-duty">ITIL service workflows: event management, access control, problem management, incident management.</li>
+                        <li class="work-expirience-duty">Monitoring alarms and performance of Telecom BSS</li> 
                         <li class="work-expirience-duty">Manual testing, creation of test cases based on a technical sheet, analysis of actual and expected results.</li>
+                        <li class="work-expirience-duty">Dealer Support</li>
                     </ul>
                 </div>
                 <!--    company one   -->
@@ -128,10 +124,9 @@
             <div class="tech-skills-section">
                 <h3 class="sidebar-tittle">Tech Skills</h3>
                 <ul class="tech-skills-list">
-                    <li class="tech-skills-items"><span class="tech-skills-items-text">Management of IT Operations (advanced user), JIRA </span></li>
-                    <li class="tech-skills-items"><span class="tech-skills-items-text">AWS EKS, Lens, Postman, swagger-ui, Grafana, Greylog </span></li>
-                    <li class="tech-skills-items"><span class="tech-skills-items-text">Python, SQL, Bash (entry level)</span></li>
-                    <li class="tech-skills-items"><span class="tech-skills-items-text">HTML5, CSS3</span></li>
+                    <li class="tech-skills-items"><span class="tech-skills-items-text">Management of IT Operations, JIRA, Git, Jenkins </span></li>
+                    <li class="tech-skills-items"><span class="tech-skills-items-text">AWS EKS, REST APIs, Postman/swagger-ui, Grafana, Graylog</span></li>
+                    <li class="tech-skills-items"><span class="tech-skills-items-text">Python, SQL, Bash</span></li>
                     <li class="tech-skills-items"><span class="tech-skills-items-text">Basics of Telecommunications</span></li>
                     <li class="tech-skills-items"><span class="tech-skills-items-text">Network Protocols: TCP/IP, DNS, DHCP, traffic routing protocols</span> </li> 
                     <li class="tech-skills-items"><span class="tech-skills-items-text">Bercut. Unified Payment System Administrator</span></li>
