--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <!--    company three   -->
                     <div class="work-expirience-company">
                         <h4 class="work-experience-position">Aplication engineer / Aplication analyst <span class="company">Netcracker Technology</span></h4>
-                        <p class="work-expirience-period">Sept 2021 - Dec 2023<span class="work-expirience-divider">|</span> Ukraine</p>
+                        <p class="work-expirience-period">Sept 2021 - Dec 2023 <span class="work-expirience-divider">|</span> Ukraine</p>
                         <ul class="work-expirience-duties">
                             <li class="work-expirience-duty">Customer Management Incident/Change/Request Handling</li>
                             <li class="work-expirience-duty">Manage Hot/Data fixes preparation and applying</li>
@@ -67,9 +67,9 @@
                         </ul>
                     </div>
                     <!--    company two   -->
+                    <div class="work-expirience-company">
                         <h4 class="work-experience-position">ITC engineer <span class="company">Ericsson Ukraine</span></h4>
                         <p class="work-expirience-period">Apr 2018 - Sept 2021 <span class="work-expirience-divider">|</span> Ukraine</p>
-                    
                         <ul class="work-expirience-duties">
                             <li class="work-expirience-duty">Customer Management Incident/Change/Request Handling</li>
                             <li class="work-expirience-duty">ITIL service workflows: event management, access control, problem management, incident management.</li>
