--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <li class="work-expirience-duty">Customer Management Incident/Change/Request Handling</li>
                             <li class="work-expirience-duty">Manage Hot/Data fixes preparation and applying</li>
                             <li class="work-expirience-duty">3P integrations supporting</li>
-                            <li class="work-expirience-duty">Versioning & CI/CD, delivery, AT analising</li>
+                            <li class="work-expirience-duty">Versioning & CI/CD, delivery, AT analysing</li>
                         </ul>
                     </div>
                     <!--    company two   -->
